# type-stuff

./: README.md  cabal.project  flake.nix  hie.yaml  type-stuff.cabal
.github/workflows/: CI.yaml
bench/: Main.hs
src/: HM.hs  Lib.hs
src/Dep/: Eval.hs  Term.hs
src/HM/: Check.hs  FastCheck.hs  Term.hs  Type.hs
src/HM/Free/: Check.hs  FastCheck.hs  Term.hs
src/HM/Term/: Embed.hs
src/HM2/: Term.hs
src/Lib/: Bind.hs  Binder.hs  Free.hs  MMap.hs  Match.hs  RVar.hs  Telescope.hs  UF.hs
test/: Spec.hs
test/Spec/: HM.hs  HM2.hs  Instances.hs
test/Spec/Instances/: Free.hs  HM.hs
