cabal-version:   2.4
name:            type-stuff
version:         0
license:         BSD-3-Clause
build-type:      Simple
license-file:    LICENSE
author:          Jonas Carpay
maintainer:      Jonas Carpay <jonascarpay@gmail.com>
copyright:       2023 Jonas Carpay
tested-with:     GHC ==8.6.3 || ==8.8.3 || ==8.10.5
extra-doc-files:
  CHANGELOG.md
  README.md

-- category:
-- description:     description
-- synopsis:        one-line synopsis
-- homepage:        https://github.com/FIXME/type-stuff#readme
-- source-repository head
--   type:     git
--   location: git://github.com/FIXME/type-stuff.git

common common-options
  build-depends:    base >=4.9 && <5
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wpartial-fields

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules:
    HM.Check
    HM.FastCheck
    HM.Term
    HM.Type
    Lib.Bind
    Lib.Free
    Lib.Match
    Lib.Telescope
    Lib.UF

  build-depends:
    , containers
    , monad-st
    , mtl
    , rebound
    , transformers

test-suite type-stuff-test
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  other-modules:  Spec.HM
  build-depends:
    , containers
    , hspec
    , HUnit
    , QuickCheck
    , type-stuff

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
